增加背景音乐

--- a/love.html
+++ b/love.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+<audio autoplay="autopaly">
+	<source src="http://sc1.111ttt.com/2015/1/05/09/98092239498.mp3" type="audio/mp3" />
+</audio>
+
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
