--- a/love.html
+++ b/love.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE HTML>
-
+<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<title>王博&培根 Love Story</title>
@@ -92,7 +92,7 @@
 			setTimeout(function () {
 				adjustWordsPosition();
 				startHeartAnimation();
-			}, 5000);
+			}, 15000);
 
 			timeElapse(together, displayMode);
 			setInterval(function () {
